# is_seo_word

./: .gitignore  README.md  build_exe.py  hello.py  pyproject.toml
data/: keyword.txt
src/is_seo_word/: ai_model_rsp_test.py  ai_model_test.toml  async_api.py  async_get_ai_rsp.py  get_ai_rsp.py  get_ai_rsp_by_keyword_list.py  get_ai_rsp_v3.py  main.py  main_async.py  main_async_by_man.py  main_by_keyword_list.py  main_threaded.py  models.py  run.py  utils.py
src/is_seo_word/datebase/: curd.py  models.py
src/is_seo_word/region_agent/: __init__.py  config.toml  core.py  run.py  utils.py
src/is_seo_word/school_object/: async_call.py  config.toml  core.py  run.py  save.py  upload_file.py  utils.py
test/: temp.py  test.py  test_ai_model_rsp_test.py  test_async_get_ai_rsp_v3.py  test_get_ai_rsp_v3.py  upload_fail_txt.py
