[project]
name = "is-seo-word"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.16",
    "multidict>=6.3.2",
    "openai>=1.70.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.2",
    "pypdf2>=3.0.1",
    "python-dateutil>=2.9.0.post0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.0",
    "pywin32>=310",
    "six>=1.12.0",
    "tkzs-bd-ads-db-tool>=0.2.4",
    "tqdm>=4.67.1",
]
